	PR objc/69844 	* c-parser.c (c_parser_for_statement): Properly handle ObjC classes 	in id_kind reclassification.

* objc.dg/pr69844.m: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@233643 138bc75d-0d04-0410-961f-82ee72b054a4